# advent_of_code_2021

./: .gitignore  Cargo.toml
.github/workflows/: build.yml
src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day14.txt  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
