[package]
name = "advent-of-code-2021"
version = "0.1.0"
authors = ["Sergio Moratilla <sergiomoratilla@playtomic.io>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
ndarray = "0.13.1"
ndarray-csv = " 0.5.1"

[[example]]
name = "day1"
path = "src/day1.rs"

[[example]]
name = "day2"
path = "src/day2.rs"

[[example]]
name = "day3"
path = "src/day3.rs"